<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/dashboard_background"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvItemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="#FFEB3B"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/Pending"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvItemStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Roll_Number"
        android:textColor="#B3FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvItemDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/complaint_details_will_appear_here"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnResolve"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/resolve"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

</LinearLayout>